# perception_basic_eduaction_UNITA_2026

./: README.md  quiz.md
Team1_firmware/Arduino/: README.md
Team2_perception/: README.md
Team2_perception/ultrasonic_lidar_ws/src/perception_stack/: package.xml  setup.py
Team2_perception/ultrasonic_lidar_ws/src/perception_stack/launch/: bringup.launch.py
Team2_perception/ultrasonic_lidar_ws/src/perception_stack/perception_stack/: rplidar_node.py  scan_cluster_node.py  ultrasonic_serial_bridge.py  ultrasonic_speaker_node.py
Team3_perception/: README.md
Team3_perception/camera_ws/src/main_pkg/: package.xml  setup.py
Team3_perception/camera_ws/src/main_pkg/config/: traffic_light.rviz
Team3_perception/camera_ws/src/main_pkg/launch/: all.launch.py
Team3_perception/camera_ws/src/sound_tts/: setup.py
Team3_perception/camera_ws/src/sound_tts/sound_tts/: sound_node.py
Team3_perception/camera_ws/src/traffic_light_pkg/: package.xml  setup.py
Team3_perception/camera_ws/src/traffic_light_pkg/traffic_light_pkg/: traffic_light_node.py
