<?xml version="1.0"?>
<package format="3">
  <name>perception_stack</name>
  <version>0.0.1</version>
  <description>Ultrasonic + LiDAR clustering + speaker nodes</description>

  <maintainer email="gyun@todo.todo">gyun</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Python ROS2 -->
  <exec_depend>rclpy</exec_depend>

  <!-- messages -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- (옵션) 시리얼 쓰면 필요 -->
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
